Migrate to OpenAPI 3.0 and express-openapi-validator, upgrade dependencies to latest versions, require Node >= 20.0
